--- a/index.html
+++ b/index.html
@@ -89,18 +89,18 @@ anim id est laborum
 <h2 class="t">TOUR VIDEOS</h2>
  <p class="t" >
   <video width="auto" height="300px" controls>
-  <source src="videos/vi1.mp4" type="video/mp4">
-  <source src="videos/vi1.ogg" type="video/ogg">
+  <source src="vi1.mp4" type="video/mp4">
+  <source src="vi1.ogg" type="video/ogg">
   </video></p>
  <p class="t">
   <video width="auto" height="300px" controls>
-  <source src="videos/vi2.mp4" type="video/mp4">
-  <source src="videos/vi2.ogg" type="video/ogg">
+  <source src="vi2.mp4" type="video/mp4">
+  <source src="vi2.ogg" type="video/ogg">
   </video></p>
  <p class="t">
   <video width="auto" height="300px" controls>
-  <source src="videos/vi3.mp4" type="video/mp4">
-  <source src="videos/vi3.ogg" type="video/ogg">
+  <source src="vi3.mp4" type="video/mp4">
+  <source src="vi3.ogg" type="video/ogg">
   </video></p>
 
 <div>
