--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ anim id est laborum
       <p>Join our newsletter</p>
       <label for="Email">E-mail</label>
       <input type="email"id="email" name="email" placeholder="abcd@gmail.com">
-      <button type="submit" onclick="alert('Conguratulations! Best offers comming your mail on the way!')">Subscribe</button>
+      <button type="submit" onclick="alert('Conguratulations! Best offers coming to your mail on the way!')">Subscribe</button>
    </div>
 </div>
 <div class="contact">
