--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@ anim id est laborum
 </div>
 <h2 class="t">TOUR VIDEOS</h2>
  <p class="t" >
-  <video width="auto" controls>
+  <video controls>
   <source src="vi1.mp4" type="video/mp4">
   <source src="vi1.ogg" type="video/ogg">
   </video></p>
  <p class="t">
-  <video width="auto"  controls>
+  <video controls>
   <source src="vi2.mp4" type="video/mp4">
   <source src="vi2.ogg" type="video/ogg">
   </video></p>
  <p class="t">
-  <video width="auto" controls>
+  <video controls>
   <source src="vi3.mp4" type="video/mp4">
   <source src="vi3.ogg" type="video/ogg">
   </video></p>
