--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ anim id est laborum
  <div class="container">
    <div style="justify-content: center;" class="row">
      <div style="justify-content: center;" class="footer-col">
-       <h4>Address</h4>
+       <h4 style="font-size:20px;font-color:white;">Address</h4>
        <ul class="u">
         <li style="color:white">Lorem ipsum dolor,</li>
         <li style="color:white">1200, Corisecture,</li>
@@ -183,7 +183,7 @@ anim id est laborum
      </div>
 
      <div class="footer-col">
-       <h4>Contact Us</h4>
+       <h4 style="font-size:20px;font-color:white;">Contact Us</h4>
        <ul class="u">
         <li><a href="#">+91 912345678</a></li>
         <li><a href="#">tourpackages@skype</a></li>
