--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div>
 
 <div class="co">
-  <div id="about" class="box">
+  <div class="box">
     <p style="text-indent:30px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
@@ -48,7 +48,7 @@ anim id est laborum
 </p>
   </div>
     
-<h2 class="t" >ABOUT US!</h2>
+<h2 id="about" class="t" >ABOUT US!</h2>
 <p class="t">
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
@@ -77,7 +77,7 @@ anim id est laborum
    <li class="t">Private driver sevice</li>
   </p>
   <h2 class="t">WE PROVIDE,</h2>
-  <p class="t" id="special"><li class="t">Individual trips</li>
+  <p class="t"><li class="t">Individual trips</li>
        <li class="t">Group tours</li></p>
   <h3 class="t">WHY YOU CHOOSE OUR TRAVEL AGENCY</h3>
   <p class="t"><li class="t">Safety travel</li>
@@ -86,7 +86,7 @@ anim id est laborum
    </p>
 </div>
 </div>
-<h2 class="t">TOUR VIDEOS</h2>
+<h2 id="special" class="t">TOUR VIDEOS</h2>
  <p class="t" >
   <video controls>
   <source src="vi1.mp4" type="video/mp4">
@@ -147,7 +147,7 @@ anim id est laborum
 </script>
 </div>
 <div class="newsletter">
-  <div id="contact" class="nl">
+  <div class="nl">
       <h2>Get the best offers!</h2>
       <p>Join our newsletter</p>
       <label for="Email">E-mail</label>
@@ -155,7 +155,7 @@ anim id est laborum
       <button type="submit" onclick="alert('Conguratulations! Best offers coming to your mail on the way!')">Subscribe</button>
    </div>
 </div>
-<div class="contact">
+<div id="contact" class="contact">
    <div class="cnt">
       <h2>Contact</h2>
       <p>Let's book your tour!</p>
