--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ anim id est laborum
    </p>
 </div>
 </div>
-<h2 id="special" class="t">TOUR VIDEOS</h2>
+<h2 class="t">TOUR VIDEOS</h2>
  <p class="t" >
   <video controls>
   <source src="vi1.mp4" type="video/mp4">
@@ -104,7 +104,7 @@ anim id est laborum
   </video></p>
 
 <div>
- <h2 class="t">TRENDING DESTINATIONS</h2>
+ <h2 id="special" class="t">TRENDING DESTINATIONS</h2>
  <figure align="middle">
  <img src="images/thanjavur.jpg" alt="Thanjavur">
  <figcaption class="i1">THANJAVUR</figcaption>
