--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div class="co">
   <div class="box">
-    <p style="text-indent:30px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+    <p id="about"  style="text-indent:30px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
@@ -48,7 +48,7 @@ anim id est laborum
 </p>
   </div>
     
-<h2 id="about" class="t" >ABOUT US!</h2>
+<h2 class="t" >ABOUT US!</h2>
 <p class="t">
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
